log
Sat, Apr 19, 2025  3:06:17 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025  3:15:27 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:79:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return map;
            ^~~
cc1.exe: all warnings being treated as errors
c67504f
Sat, Apr 19, 2025  3:16:07 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b88312c
Sat, Apr 19, 2025  3:23:03 PM: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  5|4
total_score: 30/70
1426c6c
Sat, Apr 19, 2025  3:25:25 PM: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  8|3
total_score: 40/70
dc3b9e3
Sat, Apr 19, 2025  3:26:29 PM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
6c392fa
Sat, Apr 19, 2025  3:28:31 PM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:127:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return map;
            ^~~
cc1.exe: all warnings being treated as errors
a8817ff
